<resources>
    <string name="app_name">PrivateTrac</string>
    <string name="concerned">Concerned</string>
    <string name="confirmed">Confirmed</string>
    <string name="clear_history">Clear\n History</string>
    <string name="send_data">Send\n Data</string>
    <string name="welcome_to_6_feet">Welcome to PrivateTrac</string>
    <string name="remove_upddates">Remove Updates</string>
    <string name="updates_location">Updates Location</string>
    <string name="check_database">Check\n Database</string>
    <string name="contactUs">Contact\n Us</string>
    <string name="emoji">&#10067;\n</string>
    <string name="info">  provides anonymous location sharing while prioritizing data privacy.\n</string>
    <string name="info_2">CHECK DATABASE works, but the database is hypothetical. All warnings should be ignored. \n</string>
    <string name="info_3">After the official launch with partners, CHECK DATABASE will prompt you to update your app.\n\nWhen you are satisfied with its data privacy and would like to see this app used for public services in Michigan, Please contact Governer Whitmer to help its official launch.</string>
    <string name="privacy">Data Privacy Explanation</string>
    <string name="info2">Data privacy is a natural concern for location monitoring/sharing apps.  PrivateTrac prioritizes data privacy employing multiple strategies:\n\n1. All data is stored locally on your phone. No one, not even other apps on your phone, can access it. Sharing data with administrators is voluntary. Further data privacy protocols will be provided before you decide to share.\n\n2. You have complete control over when to collect data. Data is automatically deleted after a week. You can delete all data at any time.\n\n3. Data is encrypted before stored locally on your phone. The encryption algorithm, SHA-256, is irreversible.  Stored data cannot be traced back to a location or time.\n\n4. Decentralized model lets your phone download the database and compare on the phone. No one knows your location contact results.\n\n5 For transparency, PrivateTrac\'s code is disclosed on an Open Source GitHub Repo at https://github.com/PrivateTrac/PrivateTrac. You can visit the repository to verify PrivateTrac does exactly as described and handles your data appropriately.\n\n6 If you still have reservations on data privacy, a path you can take is to start updating location only when you anticipate meeting strangers, such as leaving your home or working. At other times, you can turn off the location updates. \n</string>
    <string name="info2_2">Once satisfied with its data privacy, please share with friends and press the envelope icon below to email public officials and Governor Whitmer to advocate for the adoption of this app in public location based services.</string>
    <string name="policyTitle">Privacy Policy\n</string>
</resources>