<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <Button
                android:id="@+id/clearHistroy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="clearHistroy"
                android:text="@string/clear_history"
                android:textColor="#0088FF" />

            <Space
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/check_database"
                android:textColor="#0088FF" />

            <Space
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/sendData"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="sendData"
                android:text="@string/send_data"
                android:textColor="#0088FF" />

            <Space
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:layout_weight="4" />

            <Button
                android:id="@+id/info"
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="displayInfo"
                android:text="ℹ️"
                android:layout_marginTop="6sp"
                android:textSize="20sp"/>

            <Space
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/contactUs"
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="✉"
                android:textSize="30sp"
                android:onClick="contactUs"
                android:layout_marginTop="6sp"
                android:layout_marginEnd="16sp"
                android:textColor="#0088FF" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_6_feet"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
            <ScrollView
                android:id="@+id/scroll_id"
                android:fadeScrollbars="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/RedAlert"
                android:padding="6dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:clickable="true"
                android:onClick="dismissAlert"
                android:visibility="invisible" />
            </ScrollView>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/DowGreen"
            android:text="@string/updates_location"
            android:textSize="16sp" />

        <Button
            android:id="@+id/removeUpdates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/DowGold"
            android:text="@string/remove_upddates" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>